--- a/egzamin 3/styl.css
+++ b/egzamin 3/styl.css
@@ -1,6 +1,7 @@
 #logo img{
     height: 100px;
     width: 100px;
+    background-color: lightblue;
 }
 
 *
@@ -13,7 +14,12 @@
 {
     width: 90%;
     margin: auto;
+
+ 
+    
 }
+
+
 
 #menu
 {
@@ -22,7 +28,10 @@
     width: 50%;
     padding-top: 10px;
     padding-bottom: 10px;
-    float: right;
+   float: right;
+    
+    
+    
     
 }
 
@@ -36,13 +45,55 @@
    
 }
 
+#logo, #menu {
+    float: left;  
+}
+
 #baner
 {
     background-color:  #DDDDDD;
-    height: 200px;
+    height: 300px;
 }
 
 #glowny
 {
-    color:navy
+    color:navy;
+    margin: 50px;
+    height: 400px;
+    
+    
+}
+
+#stopka
+{
+    text-align: right;
+    background-color: lightblue;
+    padding: 10px;
+    
+    
+    
+    
+}
+
+input[type="submit"]
+{
+    background-color: lightblue;
+    color: navy;
+}
+
+input[type="reset"]
+{
+    background-color: lightblue;
+    color: navy;
+}
+
+a
+{
+    color: navy;
+    size: 150%;
+    margin: 10px;
+    padding: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: lightblue;
 }
